
	* ruby.c (proc_options): no warning when default_external already
	  set by -E.

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_rubyopt):
	  put -K after -E to set script encoding.

Thu Oct 16 06:20:36 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_transcode.rb (TestTranscode#test_errors):
	  String#encode now works without any argument. [ruby-dev:36740]

Wed Oct 15 23:11:10 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/delegate.rb (DelegateClass): restored 1.8 behavior for
	  DelegateClass as well.  [ruby-dev:36739]

Wed Oct 15 22:19:14 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* array.c (RESIZE_CAPA): check whether len is longer than capacity.

	* array.c (rb_ary_compact_bang): resize ary before changing capacity.
	  fixed [ruby-dev:36704]

Wed Oct 15 16:57:30 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* version.h (RUBY_DESCRIPTION): remove unnecessary space.

Tue Oct 14 23:18:15 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/delegate.rb (Delegator): simplified and restored 1.8
	  behavior.  [ruby-dev:35986]

Tue Oct 14 21:50:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (TESTS): skips minitest by default, since it interferes
	  with test/unit.

Tue Oct 14 21:36:29 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (load_conv_function51932): check
	  having IMultiLanguage2 or IMultiLanguage. [ruby-dev:36716]

	* ext/win32ole/extconf.rb: ditto.

Tue Oct 14 20:45:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (Init_IO): $FILENAME and $* must be read-only.  [ruby-dev:36698]

	* variable.c (*_getter, *_setter, *_marker): made public.

	* include/ruby/ruby.h (rb_gvar_*_{getter,setter,marker}): declared.

Tue Oct 14 20:32:09 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/single_byte.trans (transcode_tblgen_singlebyte): renamed
	  from transcode_tblgen_windows.
	  (transcode_tblgen_iso8859): use transcode_tblgen_singlebyte.
